feat: Common object creation and Opinion service tests fix